--- a/charts/factorio-server-charts/values.yaml
+++ b/charts/factorio-server-charts/values.yaml
@@ -308,7 +308,7 @@ map_gen_settings:
   # Multiplier for biter free zone radius
   starting_area: 1
   peaceful_mode: false
-  autoplace_controls: []
+  autoplace_controls: {}
 #    coal:
 #      frequency: 1
 #      size: 1
