Fixed Liveness Probe for Factorio container

--- a/charts/factorio-server-charts/templates/deployment.yaml
+++ b/charts/factorio-server-charts/templates/deployment.yaml
@@ -114,7 +114,9 @@ spec:
         livenessProbe:
           exec:
             command:
-              - '/bin/ps aux | /bin/grep factorio'
+              - /bin/bash
+              - -ec
+              - '/bin/ps aux | /bin/grep -v grep | /bin/grep factorio'
           periodSeconds: 10
           initialDelaySeconds: 5
           failureThreshold: 3
