--- a/charts/factorio-server-charts/templates/deployment.yaml
+++ b/charts/factorio-server-charts/templates/deployment.yaml
@@ -103,7 +103,7 @@ spec:
               mountPath: /account
             {{- end }}
         {{- end }}
-        {{- if and (not .Values.factorioServer.generate_new_save) (.Values.factorioServer.import_save_file) (.Values.factorioServer.local_save_file_name) }}
+        {{- if and (not .Values.factorioServer.generate_new_save) (.Values.factorioServer.import_save_file) }}
         - name: load-save-file
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy:  {{ .Values.image.pullPolicy }}
@@ -113,11 +113,11 @@ spec:
               - |
                 ls -al 
                 mkdir /factorio/saves
-                echo "Copying saveFile from {{ .Values.factorioServer.local_save_file_name }} to /factorio/saves/{{ .Values.factorioServer.save_name }}.zip"
-                cp "/{{ .Values.factorioServer.local_save_file_name }}" "/factorio/saves/{{ .Values.factorioServer.save_name }}.zip"
+                echo "Copying saveFile from {{ .Values.factorioServer.save_name }} to /factorio/saves/{{ .Values.factorioServer.save_name }}.zip"
+                cp "/{{ .Values.factorioServer.save_name }}" "/factorio/saves/{{ .Values.factorioServer.save_name }}.zip"
           volumeMounts:
             - name: save-file
-              mountPath: {{ .Values.factorioServer.local_save_file_name }}
+              mountPath: {{ .Values.factorioServer.save_name }}
         {{- end }}
       containers:
       - name: {{ template "factorio-server-charts.fullname" . }}
@@ -151,7 +151,7 @@ spec:
           {{- end }}
           - name: datadir
             mountPath: /factorio
-          {{- if and (not .Values.factorioServer.generate_new_save) (.Values.factorioServer.import_save_file) (.Values.factorioServer.local_save_file_name) }}
+          {{- if and (not .Values.factorioServer.generate_new_save) (.Values.factorioServer.import_save_file) }}
           - name: save-file
             mountPath: /factorio/saves/
           {{- end }}
@@ -175,7 +175,7 @@ spec:
 {{ toYaml .Values.nodeSelector | indent 8 }}
     {{- end }}
       volumes:
-        {{- if and (not .Values.factorioServer.generate_new_save) (.Values.factorioServer.import_save_file) (.Values.factorioServer.local_save_file_name) }}
+        {{- if and (not .Values.factorioServer.generate_new_save) (.Values.factorioServer.import_save_file) }}
         - name: save-file
           emptyDir: {}
         {{- end }}
