--- a/charts/factorio-server-charts/templates/service.yaml
+++ b/charts/factorio-server-charts/templates/service.yaml
@@ -15,6 +15,9 @@ metadata:
   {{- end }}
 spec:
   type: {{ .Values.service.type }}
+  {{- if .Values.service.externalTrafficPolicy}}
+  externalTrafficPolicy: {{ .Values.service.externalTrafficPolicy }}
+  {{- end }}
   ports:
     - name: factorio
       targetPort: 34197
