--- a/charts/factorio-server-charts/templates/deployment.yaml
+++ b/charts/factorio-server-charts/templates/deployment.yaml
@@ -102,7 +102,27 @@ spec:
             - name: account-data
               mountPath: /account
             {{- end }}
-      {{- end }}
+        {{- end }}
+        {{- if .Values.factorioServer.import_save }}
+        - name: import-factorio-save
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy:  {{ .Values.image.pullPolicy }}
+          command:
+            - /bin/bash
+            - -ec
+            - |
+              mkdir -p /factorio/save_to_import
+              bash /scripts/save-importer.sh
+          {{- with .Values.securityContext }}
+          securityContext:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
+          volumeMounts:
+            - name: datadir
+              mountPath: /factorio
+            - name: {{ template "factorio-server-charts.fullname" . }}-save-importer-configmap
+              mountPath: /scripts
+        {{- end }}        
       containers:
       - name: {{ template "factorio-server-charts.fullname" . }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -192,6 +212,6 @@ spec:
         - name: {{ template "factorio-server-charts.fullname" . }}-serversettingsconfig
           configMap:
             name: {{ template "factorio-server-charts.fullname" . }}-serversettingsconfig
-        - name: {{ template "factorio-server-charts.fullname" . }}-mod-downloader-configmap
+        - name: {{ template "factorio-server-charts.fullname" . }}-scripts-configmap
           configMap:
-            name: {{ template "factorio-server-charts.fullname" . }}-mod-downloader-configmap
+            name: {{ template "factorio-server-charts.fullname" . }}-scripts-configmap
