--- a/charts/factorio-server-charts/values.yaml
+++ b/charts/factorio-server-charts/values.yaml
@@ -153,6 +153,9 @@ factorioServer:
   update_mods_on_start: false
   # lets the game know if you want to load the latest save
   load_latest_save: true
+  # import a save file if it exists in /factorio/save_to_import
+  # WARNING: this will overwrite your existing save game with the name specified in factorioServer.save_name.
+  import_save: true
 
 ## @param account.accountSecret Existing secret containing a valid factorio.com username and either a password or a token (or both)
 ## @param account.username Factorio.com username, ignored if `account.accountSecret` is set
