--- a/charts/factorio-server-charts/values.yaml
+++ b/charts/factorio-server-charts/values.yaml
@@ -153,9 +153,18 @@ factorioServer:
   update_mods_on_start: false
   # lets the game know if you want to load the latest save
   load_latest_save: true
-  # import a save file if it exists in /factorio/save_to_import
-  # WARNING: this will overwrite your existing save game with the name specified in factorioServer.save_name.
-  import_save: true
+
+
+import_save:
+  #enable save importer
+  enabled: true
+  #url to download save from (http or https only).
+  #if no url is specified, saves can still be manually imported by placing the file in "/factorio/save-importer/import"
+  source_url: ""
+  #reimport from the source_url if the checksum of the file changes
+  reimport_on_change: false
+  #reimport from the source_url AND OVERWRITE PREVIOUS SAVE every time pod is initialized. good for demos or testing
+  reimport_every_time: false
 
 ## @param account.accountSecret Existing secret containing a valid factorio.com username and either a password or a token (or both)
 ## @param account.username Factorio.com username, ignored if `account.accountSecret` is set
