--- a/charts/factorio-server-charts/templates/rcon-service.yaml
+++ b/charts/factorio-server-charts/templates/rcon-service.yaml
@@ -9,7 +9,7 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
   annotations:
-  {{- range $key, $value := .Values.service.annotations }}
+  {{- range $key, $value := .Values.rcon.serviceAnnotations }}
     {{ $key }}: {{ $value | quote }}
   {{- end }}
 spec:
